--- a/index.html
+++ b/index.html
@@ -149,6 +149,11 @@
         </a>
       </div>
       <div class="md-flex__cell md-flex__cell--shrink">
+        <a href="https://buihainam.com/" title="My Notes" class="md-header-nav__button md-logo">
+           <img src="https://profile-counter.glitch.me/vnapnic/count.svg" height="24">
+        </a>
+      </div>
+      <div class="md-flex__cell md-flex__cell--shrink">
         <label class="md-icon md-icon--menu md-header-nav__button" for="__drawer"></label>
       </div>
       <div class="md-flex__cell md-flex__cell--stretch">
