--- a/index.html
+++ b/index.html
@@ -1090,12 +1090,14 @@
           <div class="md-footer-copyright__highlight">
             Copyright &copy; 2019 - 2020 Bùi Hải Nam
           </div>
-        
         powered by
         <a href="https://www.mkdocs.org">MkDocs</a>
         and
         <a href="https://squidfunk.github.io/mkdocs-material/">
           Material for MkDocs</a>
+         <div>
+         <img src="https://profile-counter.glitch.me/vnapnic/count.svg" height="24">
+         </div>
       </div>
       
   <div class="md-footer-social">
